# godello

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gdctl/: Cargo.toml  build.rs
crates/gdctl/src/: cli.rs  commands.rs  context.rs  interaction.rs  main.rs  net.rs  progress.rs
crates/gdctl/src/gui/: cache.rs  icons.rs  message.rs  mod.rs  progress.rs  state.rs  style.rs  tasks.rs  theme.rs  widgets.rs
crates/gdctl/src/gui/screens/: engines.rs  mod.rs  projects.rs  settings.rs
crates/godello-core/: Cargo.toml
crates/godello-core/src/: config.rs  csharp.rs  git.rs  godot_github.rs  install.rs  launch.rs  lib.rs  platform.rs  process.rs  project.rs  repository.rs  tools.rs  vcs.rs  version.rs
docs/: plan.md
docs/research/: gdvm.md  godots.md  launcher-ui-study.md  version-control-systems.md
packaging/: godello.desktop
