[workspace]
resolver = "3"
members = [
    "crates/godello-core",
    "crates/gdctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/jason/godello"
authors = ["Jason Gagner <gagner.jason@pm.me>"]

[workspace.dependencies]
godello-core = { path = "crates/godello-core" }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Shared external dependencies are declared here and referenced from each
# crate with `{ workspace = true }`. Versions are left to the implementation
# phase so we can pin them deliberately.
