[package]
name = "gdctl"
description = "Godello: a cross-platform Godot engine and project launcher (CLI + iced GUI)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "gdctl"
path = "src/main.rs"

[dependencies]
godello-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

# Windows binaries carry their version in a resource the file properties dialog
# reads. We write it from the build script, so it is only needed there and only
# on Windows.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
